fix lab page overflow and horiz scroll. From Hostina cafe in Breclav :)

--- a/user/themes/imaginarious/css-compiled/template-customized.css
+++ b/user/themes/imaginarious/css-compiled/template-customized.css
@@ -1299,9 +1299,11 @@ ul.pagination {
   .s-page {
     padding: 1rem;
     margin-top: 4rem;
+    overflow: hidden;
   }
   .s-page__inner {
     flex-basis: 100%;
+    max-width: 100%;
   }
   .s-page__header {
     position: relative;
