--- a/user/themes/imaginarious/scss/template-customized/_s-page.scss
+++ b/user/themes/imaginarious/scss/template-customized/_s-page.scss
@@ -37,9 +37,11 @@
     @include breakpoint( mobile-only ) {
         padding: 1rem;
         margin-top: 4rem;
+        overflow: hidden;
         
         &__inner {
             flex-basis: 100%;
+            max-width: 100%;
         }
 
         &__header {
